--- a/layout.html
+++ b/layout.html
@@ -1,44 +1,62 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title> Calculator </title>
+<title>
+Calculator Program in JavaScript
+</title>
+	
+<script>
+	<!-- Begins the JavaScript Code -->
+</script>
+	
+<style>
+	<!-- Start the coding for CSS -->
+</style>
+	
 </head>
-/*  JAVASCRIPT  IN <SCRIPT> */
-
-/*---------------------------------------------*/
-
-/* CSS IN <STYLE>  */
-
-	<body>
-	<form name="f1">
-	<center> <table border=2>
-	
-	<tr>
-	<td> NO1 </td>
-	<td><input type="text" name="no1"></td>
+<body>
+<h1> Calculator Program in JavaScript </h1>
+ <div class= "formstyle">
+ <form name = "form1">
+ <input class= "textview" name = "textview">
+ </form>
+ <center>
+ <table >
+ <tr> 
+	<td> <input class = "btn" type = "button" value = "C" onclick = "form1.textview.value = ' ' " > </td>
+	<td> <input  class = "btn" type = "button" value = "B" onclick = "backspace()" > </td>
+	<td> <input  class = "btn" type = "button" value = "/" onclick = "insert('/')" > </td>
+	<td> <input class = "btn" type = "button" value = "x" onclick = "insert('*')" > </td>
 	</tr>
 	
-	<tr>
-	<td> NO2 </td>
-	<td><input type="text" name="no2"></td>
+	 <tr> 
+	<td> <input class = "btn" type = "button" value = "7" onclick = "insert(7)" > </td>
+	<td> <input class = "btn" type = "button" value = "8" onclick = "insert(8)" > </td>
+	<td> <input class = "btn" type = "button" value = "9" onclick = "insert(9)" > </td>
+	<td> <input class = "btn" type = "button" value = "-" onclick = "insert('-')" > </td>
 	</tr>
 	
-	<tr>
-	<td colspan=2>
-	<center>
-	<input type="button" value="ADD" onclick=op("add")>
-	<input type="button" value="SUB" onclick=op("sub")>
-	<input type="button" value="MUL" onclick=op("mul")>
-	<input type="button" value="DIV" onclick=op("div")>
+	 <tr> 
+	<td> <input class = "btn" type = "button" value = "4" onclick = "insert(4)" > </td>
+	<td> <input class = "btn" type = "button" value = "5" onclick = "insert(5)" > </td>
+	<td> <input class = "btn" type = "button" value = "6" onclick = "insert(6)" > </td>
+	<td> <input class = "btn" type = "button" value = "+" onclick = "insert('+')" > </td>
+	</tr>
 	
+	 <tr> 
+	<td> <input class = "btn" type = "button" value = "1" onclick = "insert(1)" > </td>
+	<td> <input class = "btn" type = "button" value = "2" onclick = "insert(2)" > </td>
+	<td> <input class = "btn" type = "button" value = "3" onclick = "insert(3)" > </td>
+	<td rowspan = 5> <input class = "btn" style = "height: 110px" type = "button" value = "=" onclick = "equal()"> </td>
+	</tr>
+	<tr>
+	<td colspan = 2> <input class = "btn" style = "width: 106px" type = "button" value = "0" onclick = "insert(0)" > </td>
+	<td> <input class = "btn" type = "button" value = "." onclick = "insert('.')"> </td>
+	</tr>
+	</table>
 	</center>
-	</td>
-	</tr>
-	
-	<tr>
-	<td> RESULT : </td>
-	<td><input type="text" name="res"></td>
-	</tr>
-	</center>
-</table>
-</body>
-</html>
+ </div>
+ </body>
+ </html>
+
+ 
