--- a/layout.html
+++ b/layout.html
@@ -54,6 +54,7 @@ Calculator Program in JavaScript
 	<td> <input class = "btn" type = "button" value = "." onclick = "insert('.')"> </td>
 	</tr>
 	</table>
+	 <h4> By KishanPatel </h4>
 	</center>
  </div>
  </body>
